fix(media-collections): reduce filter select widths to prevent clear button from wrapping when all three filter categories are available

--- a/src/app/pages/media-collection/media-collection.page.scss
+++ b/src/app/pages/media-collection/media-collection.page.scss
@@ -91,7 +91,7 @@ a.back-link {
     --highlight-color-focused: var(--outline-button-color);
     --highlight-color-valid: var(--outline-button-color);
     flex-grow: 1;
-    max-width: 30%;
+    max-width: 27.5%;
     min-width: 240px;
 
     &:hover {
